토큰->프린시팔 toString, getName 출력 완료